# pelican-references

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py  tox.ini
.github/workflows/: main.yml
pelican/plugins/references/: __init__.py  references.py  settings.py
pelican/plugins/references/bibstyles/default/: main.html
pelican/plugins/references/bibstyles/default/blocks/: authors.html  identifiers.html  journal.html  pages.html  title.html
pelican/plugins/references/bibstyles/default/types/: journal-article.html
pelican/plugins/references/citestyles/numeric/: bibliography.html  inline.html
pelican/plugins/references/labels/: number_brackets.py
