[tool.poetry]
name = "pelican-references"
version = "0.2.2"
description = "Generate bibliographies from BibTeX files"
authors = ["Fabian Köhler <fabian.koehler@protonmail.ch>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["pelican", "plugin"]
repository = "https://github.com/f-koehler/pelican-references"
documentation = "https://docs.getpelican.com"
packages = [{ include="pelican" }]

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/f-koehler/pelican-references/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pelican = ">=4.5"
markdown = { version=">=3.2", optional=true }
pybtex = "^0.24.0"
pre-commit = "^2.13.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
black = { version="^21.5b0", allow-prereleases=true }
flake8 = "^4.0"
flake8-black = "^0.2"
invoke = "^1.3"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2"
pytest = "^6.0"
pytest-cov = "^3.0"
pytest-pythonpath = "^0.7"
pytest-sugar = "^0.9"
Werkzeug = "^2.0"
mypy = "^0.910"
types-beautifulsoup4 = "^4.9.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.poetry.plugins."pybtex.style.labels"]
"pybtex.style.labels.number_brackets" = "pelican.plugins.references.labels.number_brackets:LabelStyle"

[tool.autopub]
project-name = "references"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
