[tool.poetry]
authors = ["Fabian Köhler <fabian.koehler@protonmail.ch>"]
description = "Generate bibliographies from BibTeX files"
documentation = "https://docs.getpelican.com"
keywords = ["pelican", "plugin"]
license = "AGPL-3.0"
name = "pelican-references"
packages = [{include = "pelican"}]
readme = "README.md"
repository = "https://github.com/f-koehler/pelican-references"
version = "0.3.0"

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Pelican",
  "Framework :: Pelican :: Plugins",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/f-koehler/pelican-references/issues"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.9.3"
markdown = {version = ">=3.2", optional = true}
pelican = ">=4.5"
pre-commit = "^2.13.0"
pybtex = "^0.24.0"
python = ">=3.10,<4.0"

[tool.poetry.dev-dependencies]
Werkzeug = "^2.0"
black = {version = "^22.1", allow-prereleases = true}
flake8 = "^4.0"
flake8-black = "^0.3"
invoke = "^1.3"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2"
mypy = "^0.942"
pytest = "^7.0"
pytest-cov = "^3.0"
pytest-pythonpath = "^0.7"
pytest-sugar = "^0.9"
types-beautifulsoup4 = "^4.9.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.poetry.plugins."pybtex.style.labels"]
"pybtex.style.labels.number_brackets" = "pelican.plugins.references.labels.number_brackets:LabelStyle"

[tool.autopub]
append-github-contributor = true
git-email = "botpub@autopub.rocks"
git-username = "botpub"
project-name = "references"

[tool.isort]
# Maintain compatibility with Black
multi_line_output = 3
profile = "black"

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
